--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
 gtk4-layer-shell = "0.5.0"
 itertools = "0.14.0"
+lazy_static = "1.5.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
